# InterProcess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Process.h  Process.hpp  ProcessError.h
src/: Process.cpp  ProcessError.cpp  test.cpp
test/: CMakeLists.txt  ChildConfirmationTest.cpp  ChildDestructionTest.cpp  InvalidProcessHandlingTest.cpp  ProcessTest.cpp
